# persista

./: .editorconfig  .gitignore  Cargo.toml  build.gradle.kts  deps.json  flake.nix  module.nix  package.nix  settings.gradle.kts
.github/workflows/: autoupdate.yaml  build-aarch64.yml  build-x86_64.yml  nix.yml
.sqlx/: query-23f27f702f05e5cb449d29b53838023e44dbee3aa48a32b6c20d5a6254ae030e.json  query-2ad09d961e14429e8635fa460057b705f7c2c94a31f23b95ab008bc34b243497.json  query-55f7c4b60207393a87acce203dfc66ddfe98b215a2a4a6c79a552fd23dac8b73.json  query-af486052d21ef23c7702a365b920cb50931121d33a97e600c3844d4cbcd75137.json  query-c34319775d1174ee708f2294feb0fc9fa98377767bc5252b6f5733b1aa4a3d3c.json  query-eba684d2088d5bdc64287a6d9ee9893a20f27d2d6f49bd956ea36c53ad4e6053.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
migrations/: 20260618184246_init_player_data.sql
nix/: module.nix  package.nix
nix/dev-pg/: default.nix  dev-pg.sh
nix/stop-pg/: default.nix  stop-pg.sh
src/: config.rs  db.rs  error.rs  identifier.rs  jwt.rs  main.rs  model.rs  mojang.rs  rate_limit.rs
src/db/: mod.rs
src/identifier/: error.rs  mod.rs
src/main/kotlin/com/macuguita/persista/: Application.kt
src/main/kotlin/com/macuguita/persista/auth/: JwtService.kt  MojangAuth.kt
src/main/kotlin/com/macuguita/persista/data/: Config.kt  Identifier.kt  SessionToken.kt
src/main/kotlin/com/macuguita/persista/databse/: DatabaseFactory.kt
src/main/resources/db/migration/: V1__init.sql
src/net/: jwt.rs  mod.rs  model.rs  mojang.rs  rate_limit.rs
(+6 files in other folders)
