[package]
name = "persista"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9" 
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
getrandom = "0.4.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
